deploy/k8sjeeves-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8sjeeves
  name: k8sjeeves
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8sjeeves
  strategy: {}
  template:
    metadata:
      labels:
        app: k8sjeeves
    spec:
      containers:
      - image: phenixblue/k8sjeeves:latest
        name: k8sjeeves
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 500m
            memory: 256Mi
status: {}
