deploy/k8sjeeves-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8sjeeves
  name: k8sjeeves
spec:
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: k8sjeeves
  type: ClusterIP
status:
  loadBalancer: {}
