deploy/k8sjeeves-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: k8sjeeves
spec:
  rules:
  - host: k8sjeeves.ny-tst1001.tk8s.io
    http:
      paths:
      - backend:
          service:
            name: k8sjeeves
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - k8sjeeves.ny-tst1001.tk8s.io
    secretName: k8sjeeves-cert
